<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/bg_dialog">

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_title"
            android:text="@string/alarm_name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edt_name"/>

    <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_name"
            android:textCursorDrawable="@color/colorTealBlue"
            android:backgroundTint="@color/colorTealBlue"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dialog_ok"
            android:text="@string/ok"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:textColor="@color/colorTealBlue"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            app:layout_constraintLeft_toRightOf="@id/btn_dialog_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dialog_cancel"
            android:text="@string/cancel1"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:textColor="@color/colorTealBlue"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            app:layout_constraintRight_toLeftOf="@id/btn_dialog_ok"
            app:layout_constraintEnd_toStartOf="@id/btn_dialog_ok"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>