<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/sub_action_bar"
             android:id="@+id/action_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/status_container"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status_container"
            app:layout_constraintTop_toBottomOf="@id/action_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:id="@+id/tv_status"
                android:textColor="@color/colorBlack"
                android:text="@string/on"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:button="@drawable/iv_switch"
                android:background="@null"
                android:thumb="@null"
                android:id="@+id/active_switch"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <View android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:id="@+id/view1"
          android:background="@color/colorGray"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          app:layout_constraintTop_toBottomOf="@id/status_container"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toTopOf="@id/scrollView"/>

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/interval_title"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_list">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval"
                android:textSize="18sp"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:layout_margin="5dp"
              android:layout_gravity="center_vertical"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/interval_list"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/interval_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/repeat_title"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/interval_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_list">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:textSize="18sp"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:layout_margin="5dp"
              android:layout_gravity="center_vertical"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_list"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/repeat_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>